--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "main": "index.js",
   "authors": {
     "name": "Edmundo Rubio",
-    "email": "zerphyr.r@gmail.com"
+    "email": "erubio@zyphex.com"
   },
-  "repository": "https://github.com/Edxael/Notes-VuePress/Edxael-Notes",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Edxael/Notes-VuePress.git"
+  },
   "scripts": {
     "dev": "vuepress dev src",
-    "build": "vuepress build src"
+    "build": "vuepress build src",
+    "docs:build": "vuepress build docs"
   },
   "license": "MIT",
+  "homepage": "https://github.com/Edxael/Notes-VuePress#readme",
   "devDependencies": {
     "vuepress": "^1.5.3"
   }
